--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,18 @@ h1.logo a img{width: 16rem;}
   .sign{display: none;}
   .more-btn{width: 30px; height: 18px;}
 
+  .aside-lnb{max-width: 25rem;}
+  .aside-inner{padding: 2rem;}
+  .aside-inner .aside-login{margin-bottom: 5rem;}
+  .aside-inner .aside-login a{font-size: 1.2rem;}
+  .lesserafim_banner{margin-left: -2rem; margin-bottom: 5rem;}
+  .lesserafim_banner img{width: 120%;}
+  .aside_scroll>ul>li>a{font-size: 1.5rem;}
+  .depth>ul{margin-top: 1.8rem;}
+  .depth>ul>li>a{font-size: 1rem;}
+  .aside_scroll .aside-num dt{font-size: 1.5rem;}
+  .aside_scroll .aside-num dd{font-size: 1.5rem;}
+
   /* join */
   .jmiddle-pc{display: none;}
   .jbottom-pc{display: none;}
@@ -599,9 +611,13 @@ h1.logo a img{width: 16rem;}
   .oii-img-wrap, .oii-text-wrap{width: 100%; height: 50%; position: relative;}
 
     /* footer */
-.footer-up{flex-direction: column;}
+.footer-up{flex-direction: column; padding: 2rem 0 1.5rem;}
+.footer-down{padding: 2rem 0 1.5rem;}
 .fnumber>ul>li{float: left; margin-right: 2rem;}
 .ftext>ul, .ficon>ul{justify-content: start;}
+.fnumber>ul>li>.sub-text{font-size: 1rem;}
+.fnumber>ul>li>.tel{font-size: 2.3rem;}
+.ftext>ul>li>a{font-size: 1rem;}
 }
 
 @media screen and (max-width: 550px) {
