--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,13 @@ h1.logo a img{width: 16rem;}
 .jleft{width: 100%; margin-right: 2rem; position: relative;}
 .jright{width: 100%; margin-right: 2rem; position: relative;}
 .inputArea{width: 100%; margin-bottom: 0.8rem;}
-.inputArea label{font-size: 1.8rem; font-weight: bold; display: block; margin-bottom: 1rem; display: inline-block; margin-right: 1rem;}
-.inputArea span{font-size: 1.5em;}
+.inputArea label{font-size: 1.5rem; font-weight: bold; display: block; margin-bottom: 1rem; display: inline-block; margin-right: 1rem;}
+.inputArea span{font-size: 1.2rem;}
 .inputArea input{width: 23rem; height: 2.5rem; border-radius: 10px; padding: 5px 5px 5px 10px; background: #eee; margin-bottom: 0.5rem; display: block;}
 .inputArea:last-child input{margin-bottom: 0rem;}
 .id-section input{width: 165px;}
 .id-section button{padding: 6px; border-radius: 10px; margin-left: 1px; height: 30px; cursor: pointer;}
-.jbottom{font-size: 1.8rem; font-weight: bold;}
+.jbottom{font-size: 1.2rem; font-weight: bold;}
 .jbottom div:first-child{margin-top: 0.5rem;}
 .jbottom span{font-size: 1.3rem;}
 .signupbtn{margin-top: 3rem; text-align: center;}
@@ -457,7 +457,7 @@ h1.logo a img{width: 16rem;}
   /* join */
   .join{width: 60rem; height: 60rem; left: 45%;}
   .jimg{display: none; flex-basis: 0%;}
-  .jreg{flex-basis: 100%; padding: 5rem; border-radius: 20px;}
+  .jreg{flex-basis: 100%; padding: 3rem; border-radius: 20px;}
   .jleft{margin:0 2.5rem;}
   .jright{margin:0 2.5rem;}
 
@@ -544,12 +544,28 @@ h1.logo a img{width: 16rem;}
   .jbottom-pc{display: none;}
   .jmiddle-m{display: block;}
   .jbottom-m{display: block;}
-  .join{width: 40rem; height: 80rem; left: 50%;}
-  .inputArea input{width: 300px; height: 3rem;}
-  .id-section input{width: 235px;}
+  .join{width: 43rem; height: 40rem; left: 50%; overflow-y: scroll;}
+  .jreg{height: 75rem;}
+  .inputArea input{width: 340px; height: 3rem;}
+  .id-section input{width: 275px;}
   .id-section button{height: 30px;}
   .gnederArea{margin-left: 0rem; margin-top: 1rem;}
   .signupbtn{margin-top: 3.5rem;}
+
+  .join::-webkit-scrollbar {
+    width: 10px;
+  }
+  .join::-webkit-scrollbar-thumb {
+    background-color: #2f3542;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 2px solid transparent;
+  }
+  .join::-webkit-scrollbar-track {
+    background-color: grey;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 5px white;
+  }
 
   /* banner */
   .banner-img{max-width: 500px;}
