--- a/css/style.css
+++ b/css/style.css
@@ -455,11 +455,35 @@ h1.logo a img{width: 16rem;}
   .depth>ul>li>a{font-size: 1.3rem;}
 
   /* join */
-  .join{width: 60rem; height: 60rem; left: 45%;}
-  .jimg{display: none; flex-basis: 0%;}
-  .jreg{flex-basis: 100%; padding: 3rem; border-radius: 20px;}
   .jleft{margin:0 2.5rem;}
   .jright{margin:0 2.5rem;}
+  .jmiddle-pc{display: none;}
+  .jbottom-pc{display: none;}
+  .jmiddle-m{display: block;}
+  .jbottom-m{display: block;}
+  .join{width: 35rem; height: 40rem; left: 45%; overflow-y: scroll;}
+  .jimg{display: none; flex-basis: 0%;}
+  .jreg{flex-basis: 100%; padding: 3rem; border-radius: 20px; height: 75rem;}
+  .inputArea input{width: 280px; height: 3rem;}
+  .id-section input{width: 215px;}
+  .id-section button{height: 30px;}
+  .gnederArea{margin-left: 0rem; margin-top: 1rem;}
+  .signupbtn{margin-top: 3.5rem;}
+
+  .join::-webkit-scrollbar {
+    width: 10px;
+  }
+  .join::-webkit-scrollbar-thumb {
+    background-color: #2f3542;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 2px solid transparent;
+  }
+  .join::-webkit-scrollbar-track {
+    background-color: grey;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 5px white;
+  }
 
   .inputArea input{width: 250px; height: 2.5rem; border-radius: 10px; padding: 5px 5px 5px 10px; background: #eee; margin-bottom: 0.5rem; display: block; box-sizing: border-box;}
   .id-section input{width: 185px;}
@@ -540,32 +564,7 @@ h1.logo a img{width: 16rem;}
   .aside_scroll .aside-num dd{font-size: 1.5rem;}
 
   /* join */
-  .jmiddle-pc{display: none;}
-  .jbottom-pc{display: none;}
-  .jmiddle-m{display: block;}
-  .jbottom-m{display: block;}
-  .join{width: 35rem; height: 40rem; left: 50%; overflow-y: scroll;}
-  .jreg{height: 75rem;}
-  .inputArea input{width: 280px; height: 3rem;}
-  .id-section input{width: 215px;}
-  .id-section button{height: 30px;}
-  .gnederArea{margin-left: 0rem; margin-top: 1rem;}
-  .signupbtn{margin-top: 3.5rem;}
 
-  .join::-webkit-scrollbar {
-    width: 10px;
-  }
-  .join::-webkit-scrollbar-thumb {
-    background-color: #2f3542;
-    border-radius: 10px;
-    background-clip: padding-box;
-    border: 2px solid transparent;
-  }
-  .join::-webkit-scrollbar-track {
-    background-color: grey;
-    border-radius: 10px;
-    box-shadow: inset 0px 0px 5px white;
-  }
 
   /* banner */
   .banner-img{max-width: 500px;}
