--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 /* layout */
-#header{width: 100%; padding: 3rem 0; background: transparent;  position: absolute; top: 0; left: 0; z-index: 999; }
+#header{width: 100%; padding: 3rem 0; background: rgba(255, 255, 255, 0.3);  position: absolute; top: 0; left: 0; z-index: 999; }
 #header.drop{position: fixed; animation: dropheader 0.3s; background: var(--base-beige); width: 100%; top: 0; left: 0;}
 #content{display: flex; flex-direction: column;}
 
@@ -10,7 +10,7 @@
 }
 
 /* header */
-#header>.inner{padding-top: 2rem; background: none;}
+#header>.inner{padding-top: 2rem; background: none; width: 95%;}
 .header{height: 100%;}
 h1.logo a img{width: 16rem;}
 .menu ul{margin: 0 !important; text-align: center;}
@@ -58,8 +58,8 @@ h1.logo a img{width: 16rem;}
 .order-ob>button img{width: 2.5rem; height: 2.5rem; margin-right: 0.5rem;}
 
 
-.more-btn{width: 130px; height: 29px;}
-.more-btn-wrap{width: 100%; height: 24px; display: block; position: relative;}
+.more-btn{width: 163px; height: 30px;}
+.more-btn-wrap{width: 30px; height: 24px; position: relative; }
 
 .bar{display: block; width: 30px; height: 0.4rem; background: var(--base-black); position: absolute; transition: 0.3s;}
 .bar1{top: 0;}
